{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 239,
  "lineage": "bd3f8a93-fe91-dd46-6296-cfb76be26cac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0225bc2990c54ce9a",
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:instance/i-08432e8dbd016e0c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08432e8dbd016e0c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gmail-ec2-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f389325a41fabff",
            "private_dns": "ip-10-222-0-121.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.121",
            "public_dns": "ec2-13-125-25-206.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.25.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd058372c7cbced5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09485d7e9d8243d3d",
            "tags": {
              "Name": "apne2-fastcampus-demo",
              "Project": "fastcampus-docker-kubernetes"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-demo",
              "Project": "fastcampus-docker-kubernetes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e530742b83bd5569"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.network",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:security-group/sg-0e530742b83bd5569",
            "description": "Security Group for demo.",
            "egress": [],
            "id": "sg-0e530742b83bd5569",
            "ingress": [],
            "name": "apne2-fastcampus-demo",
            "name_prefix": "",
            "owner_id": "390298806374",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apne2-fastcampus-demo",
              "Project": "fastcampus-docker-kubernetes",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-demo",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-demo",
              "Project": "fastcampus-docker-kubernetes",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-demo",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-1430926666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e530742b83bd5569",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all communication from anywhere.",
            "from_port": 0,
            "id": "sgrule-341754351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e530742b83bd5569",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}